[gd_scene load_steps=8 format=2]

[ext_resource path="res://mc side flipped.png" type="Texture" id=1]
[ext_resource path="res://mc back.png" type="Texture" id=2]
[ext_resource path="res://mc front.png" type="Texture" id=3]
[ext_resource path="res://mc side.png" type="Texture" id=4]
[ext_resource path="res://player.gd" type="Script" id=5]
[ext_resource path="res://mc side2.png" type="Texture" id=6]
[ext_resource path="res://mc side flipped2.png" type="Texture" id=7]

[node name="player" type="KinematicBody2D" groups=["player"]]
position = Vector2( -1, 0 )
script = ExtResource( 5 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -20, -30, -23, 0, -21, 28, 22, 28, 26, 2, 22, -30 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
polygon = PoolVector2Array( -20, -30, -23, 0, -21, 28, 22, 28, 26, 2, 22, -30 )

[node name="McBack" type="Sprite" parent="."]
position = Vector2( 11, 11 )
scale = Vector2( 2.0625, 2.08333 )
texture = ExtResource( 2 )

[node name="McSideFlipped" type="Sprite" parent="."]
position = Vector2( 0, 20 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="McSide" type="Sprite" parent="."]
position = Vector2( 10, 24 )
scale = Vector2( 2, 2 )
texture = ExtResource( 4 )

[node name="McFront" type="Sprite" parent="."]
position = Vector2( 1, 5 )
scale = Vector2( 1.675, 1.28333 )
texture = ExtResource( 3 )

[node name="McSide2" type="Sprite" parent="."]
position = Vector2( 10, 24 )
scale = Vector2( 2, 2 )
texture = ExtResource( 6 )

[node name="McSideFlipped2" type="Sprite" parent="." groups=["player"]]
position = Vector2( 0, 20 )
scale = Vector2( 2, 2 )
texture = ExtResource( 7 )
